The idea is to record here changes that deserve mentioning in
the release notes, as we make them, to make the release process easier.

Next version:

2.1 (????-??-??)

* support for EPUB ebook format
* added menu item to rename a file (contributed by Vasily Fomin)
* support multi-page TIFF files
* support for some comic book (CBZ) metadata

2.0.1 (????-??-??)

* fix loading .mobi files from command line
* fix a crash loading multiple .mobi files at once
* fix a crash showing tooltips for table of contents tree entries

2.0 (2012-04-02)

* support for mobi ebook format
* we can now open CHM documents from network drives
* images from documents can be copied from the context menu
* document colors can be replaced with Windows system colors
  (option hidden if Windows displays text black-on-white)
* smaller size thanks to ucrt

1.9 (2011-11-23)

* CHM documents support
* support touch gestures (available on Windows 7 or later)
  (contributed by Robert Prouse)
* open linked audio and video files in an external media player
* improved support for PDF transparency groups

1.8 (2011-09-18)

* improved support for PDF form text fields
* various minor improvements and crash fixes
* speedup handling some djvu files

1.7 (2011-07-18)

* favorites
* logical page numbers are displayed and used, if a document
  provides them (such as i, ii, iii, etc.)
* allow to restrict SumatraPDF's features with more granularity; see
  http://code.google.com/p/sumatrapdf/source/browse/trunk/docs/sumatrapdfrestrict.ini
* -named-dest also matches strings in table of contents
* improved support for EPS files (requires Ghostscript)
* improved support for right-to-left languages e.g. Arabic
* more robust installer (requires to close programs, like a browser, that
  are using Sumatra components, preventing them from being over-written
  during installation)

1.6 (2011-05-30)

* display Frequently Read list when no document is open
* add support for displaying DjVu documents