@@ -210,8 +210,8 @@ $(OS)\EngineDump.obj: src\BaseEngine.h src\ChmEngine.h src\DjVuEngine.h
 $(OS)\EngineDump.obj: src\EngineManager.h src\EpubEngine.h src\ImagesEngine.h
 $(OS)\EngineDump.obj: src\PdfEngine.h src\PsEngine.h src\utils\Allocator.h
 $(OS)\EngineDump.obj: src\utils\BaseUtil.h src\utils\CmdLineParser.h src\utils\FileUtil.h
-$(OS)\EngineDump.obj: src\utils\GdiPlusUtil.h src\utils\GeomUtil.h src\utils\RefCounted.h
-$(OS)\EngineDump.obj: src\utils\Scoped.h src\utils\StrUtil.h src\utils\Vec.h
+$(OS)\EngineDump.obj: src\utils\GeomUtil.h src\utils\RefCounted.h src\utils\Scoped.h
+$(OS)\EngineDump.obj: src\utils\StrUtil.h src\utils\TgaReader.h src\utils\Vec.h
 $(OS)\EngineDump.obj: src\utils\WinUtil.h
 $(OS)\EpubDoc.obj: src\EbookBase.h src\EpubDoc.h src\utils\Allocator.h
 $(OS)\EpubDoc.obj: src\utils\BaseUtil.h src\utils\FileUtil.h src\utils\GeomUtil.h
@@ -529,7 +529,8 @@ $(OU)\FileUtil.obj: src\utils\GeomUtil.h src\utils\RefCounted.h src\utils\Scoped
 $(OU)\FileUtil.obj: src\utils\StrUtil.h src\utils\Vec.h
 $(OU)\GdiPlusUtil.obj: src\utils\Allocator.h src\utils\BaseUtil.h src\utils\GdiPlusUtil.h
 $(OU)\GdiPlusUtil.obj: src\utils\GeomUtil.h src\utils\RefCounted.h src\utils\Scoped.h
-$(OU)\GdiPlusUtil.obj: src\utils\StrUtil.h src\utils\Vec.h src\utils\WinUtil.h
+$(OU)\GdiPlusUtil.obj: src\utils\StrUtil.h src\utils\TgaReader.h src\utils\Vec.h
+$(OU)\GdiPlusUtil.obj: src\utils\WinUtil.h
 $(OU)\HtmlPrettyPrint.obj: src\utils\Allocator.h src\utils\BaseUtil.h src\utils\GeomUtil.h
 $(OU)\HtmlPrettyPrint.obj: src\utils\HtmlPrettyPrint.h src\utils\HtmlPullParser.h src\utils\RefCounted.h
 $(OU)\HtmlPrettyPrint.obj: src\utils\Scoped.h src\utils\StrUtil.h src\utils\Vec.h
@@ -558,6 +559,9 @@ $(OU)\StrUtil.obj: src\utils\Vec.h
 $(OU)\StrUtil_ut.obj: src\utils\Allocator.h src\utils\BaseUtil.h src\utils\GeomUtil.h
 $(OU)\StrUtil_ut.obj: src\utils\RefCounted.h src\utils\Scoped.h src\utils\StrUtil.h
 $(OU)\StrUtil_ut.obj: src\utils\Vec.h
+$(OU)\TgaReader.obj: src\utils\Allocator.h src\utils\BaseUtil.h src\utils\GeomUtil.h
+$(OU)\TgaReader.obj: src\utils\RefCounted.h src\utils\Scoped.h src\utils\StrUtil.h
+$(OU)\TgaReader.obj: src\utils\TgaReader.h src\utils\Vec.h src\utils\WinUtil.h
 $(OU)\ThreadUtil.obj: src\utils\Allocator.h src\utils\BaseUtil.h src\utils\GeomUtil.h
 $(OU)\ThreadUtil.obj: src\utils\RefCounted.h src\utils\Scoped.h src\utils\StrUtil.h
 $(OU)\ThreadUtil.obj: src\utils\ThreadUtil.h src\utils\Vec.h
