@@ -340,9 +340,15 @@ bool ImageEngineImpl::LoadSingleFile(const TCHAR *file)
         return false;
     fileName = str::Dup(file);
 
-    char header[8];
+    char header[18];
     if (file::ReadAll(file, header, sizeof(header)))
         fileExt = GfxFileExtFromData(header, sizeof(header));
+
+    if (str::Eq(fileExt, _T(".tga"))) {
+        size_t len;
+        ScopedMem<char> data(file::ReadAll(file, &len));
+        return FinishLoading(BitmapFromData(data, len));
+    }
 
     Bitmap *bmp = Bitmap::FromFile(AsWStrQ(file));
     return FinishLoading(bmp);
@@ -355,9 +361,15 @@ bool ImageEngineImpl::LoadFromStream(IStream *stream)
     fileStream = stream;
     fileStream->AddRef();
 
-    char header[8];
+    char header[18];
     if (ReadDataFromStream(stream, header, sizeof(header)))
         fileExt = GfxFileExtFromData(header, sizeof(header));
+
+    if (str::Eq(fileExt, _T(".tga"))) {
+        size_t len;
+        ScopedMem<char> data((char *)GetDataFromStream(stream, &len));
+        return FinishLoading(BitmapFromData(data, len));
+    }
 
     Bitmap *bmp = Bitmap::FromStream(stream);
     return FinishLoading(bmp);
@@ -398,7 +410,8 @@ bool ImageEngine::IsSupportedFile(const TCHAR *fileName, bool sniff)
            str::EndsWithI(fileName, _T(".jpg")) || str::EndsWithI(fileName, _T(".jpeg")) ||
            str::EndsWithI(fileName, _T(".gif")) ||
            str::EndsWithI(fileName, _T(".tif")) || str::EndsWithI(fileName, _T(".tiff")) ||
-           str::EndsWithI(fileName, _T(".bmp"));
+           str::EndsWithI(fileName, _T(".bmp")) ||
+           str::EndsWithI(fileName, _T(".tga"));
 }
 
 ImageEngine *ImageEngine::CreateFromFile(const TCHAR *fileName)
@@ -541,8 +554,11 @@ public:
 DocTocItem *ImageDirEngineImpl::GetTocTree()
 {
     DocTocItem *root = new ImageDirTocItem(GetPageLabel(1), 1);
+    root->id = 1;
     for (int i = 2; i <= PageCount(); i++) {
-        root->AddSibling(new ImageDirTocItem(GetPageLabel(i), i));
+        DocTocItem *item = new ImageDirTocItem(GetPageLabel(i), i);
+        item->id = i;
+        root->AddSibling(item);
     }
     return root;
 }
